# thai-travel-together

./: README.md  pyproject.toml
backend/: main.py
backend/models/: __init__.py  account_model.py  province_model.py  user_model.py
backend/routers/v1/: __init__.py  accounts.py  province.py  provinces.py  users.py
backend/schemas/: account_schema.py  province_schema.py  user_schema.py
