[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "adithep.b",email = "adithepbaebmueann@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "fastapi-cli (>=0.0.8,<0.0.9)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"

